[gd_scene load_steps=8 format=3 uid="uid://bfohk3dxx3qbv"]

[ext_resource type="Script" path="res://Actors/Menus+GUI/main_menu.gd" id="1_jw1op"]
[ext_resource type="Theme" uid="uid://cifp0gik2d7c3" path="res://Resources/Themes/menu_theme.tres" id="1_kos02"]
[ext_resource type="PackedScene" uid="uid://cqkooyhov3s6r" path="res://Actors/Menus+GUI/menu_hallway.tscn" id="3_dffns"]
[ext_resource type="Texture2D" uid="uid://qlcvxcxstp5c" path="res://Assets/Images/MenusAndUI/HallwayMask.png" id="3_ypohn"]

[sub_resource type="Theme" id="Theme_fnc02"]

[sub_resource type="ViewportTexture" id="ViewportTexture_8llem"]
viewport_path = NodePath("SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_vn6i1"]
viewport_path = NodePath("SubViewport")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_kos02")
script = ExtResource("1_jw1op")

[node name="TitleScreen" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="TitleScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="TitleScreen/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 32
theme_override_constants/margin_bottom = 32

[node name="CenterContainer" type="CenterContainer" parent="TitleScreen/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="TitleScreen/VBoxContainer/MarginContainer/CenterContainer"]
layout_mode = 2
theme = SubResource("Theme_fnc02")
text = "The
Seeker"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TitleScreen/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="TitleScreen/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme_override_constants/margin_left = 32

[node name="VBoxContainer" type="VBoxContainer" parent="TitleScreen/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="TitleScreen/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="HSeparator" type="HSeparator" parent="TitleScreen/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="OptionsButton" type="Button" parent="TitleScreen/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options
"

[node name="HSeparator2" type="HSeparator" parent="TitleScreen/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ExtraButton" type="Button" parent="TitleScreen/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Extra"

[node name="HSeparator3" type="HSeparator" parent="TitleScreen/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ExitButton2" type="Button" parent="TitleScreen/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit
"

[node name="Control" type="Control" parent="TitleScreen/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="TitleScreen/VBoxContainer/HBoxContainer/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -512.0
offset_top = -512.0
grow_horizontal = 0
grow_vertical = 0
texture = SubResource("ViewportTexture_8llem")
stretch_mode = 4

[node name="TextureRect" type="TextureRect" parent="TitleScreen/VBoxContainer/HBoxContainer/Control/TextureRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_ypohn")

[node name="OptionsScreen" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.121569, 0.137255, 0.180392, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="OptionsScreen/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_top = 32
theme_override_constants/margin_bottom = 32

[node name="CenterContainer" type="CenterContainer" parent="OptionsScreen/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="OptionsScreen/VBoxContainer/MarginContainer/CenterContainer"]
layout_mode = 2
text = "Options
"

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsScreen/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="OptionsScreen/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsScreen/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="SomethingButton" type="Button" parent="OptionsScreen/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Something
"

[node name="HSeparator" type="HSeparator" parent="OptionsScreen/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="OptionsReturnButton" type="Button" parent="OptionsScreen/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Return"

[node name="Control" type="Control" parent="OptionsScreen/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="OptionsScreen/VBoxContainer/HBoxContainer/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -512.0
offset_top = -512.0
grow_horizontal = 0
grow_vertical = 0
texture = SubResource("ViewportTexture_vn6i1")
stretch_mode = 4

[node name="TextureRect" type="TextureRect" parent="OptionsScreen/VBoxContainer/HBoxContainer/Control/TextureRect"]
modulate = Color(1, 1, 1, 0.25098)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_ypohn")

[node name="ExtraScreen" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0470588, 0.0470588, 0.0470588, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ExtraScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ExtraScreen/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 32
theme_override_constants/margin_bottom = 32

[node name="CenterContainer" type="CenterContainer" parent="ExtraScreen/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ExtraScreen/VBoxContainer/MarginContainer/CenterContainer"]
layout_mode = 2
text = "Extra"

[node name="HBoxContainer" type="HBoxContainer" parent="ExtraScreen/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="ExtraScreen/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32

[node name="VBoxContainer" type="VBoxContainer" parent="ExtraScreen/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="SomethingButton" type="Button" parent="ExtraScreen/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "PLACEHOLDER"

[node name="HSeparator" type="HSeparator" parent="ExtraScreen/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ExtraReturnButton" type="Button" parent="ExtraScreen/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Return"

[node name="Control" type="Control" parent="ExtraScreen/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="ExtraScreen/VBoxContainer/HBoxContainer/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -512.0
offset_top = -512.0
grow_horizontal = 0
grow_vertical = 0
texture = SubResource("ViewportTexture_vn6i1")
stretch_mode = 4

[node name="TextureRect" type="TextureRect" parent="ExtraScreen/VBoxContainer/HBoxContainer/Control/TextureRect"]
modulate = Color(1, 1, 1, 0.74902)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_ypohn")

[node name="SubViewport" type="SubViewport" parent="."]

[node name="MenuHallway" parent="SubViewport" instance=ExtResource("3_dffns")]

[connection signal="pressed" from="TitleScreen/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="TitleScreen/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="TitleScreen/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/ExtraButton" to="." method="_on_extra_button_pressed"]
[connection signal="pressed" from="TitleScreen/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/ExitButton2" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="OptionsScreen/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/OptionsReturnButton" to="." method="_on_options_return_button_pressed"]
[connection signal="pressed" from="ExtraScreen/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/ExtraReturnButton" to="." method="_on_extra_return_button_pressed"]
[connection signal="exit_reached" from="SubViewport/MenuHallway" to="." method="_on_menu_hallway_exit_reached"]
[connection signal="extra_left" from="SubViewport/MenuHallway" to="." method="_on_menu_hallway_extra_left"]
[connection signal="extra_reached" from="SubViewport/MenuHallway" to="." method="_on_menu_hallway_extra_reached"]
[connection signal="options_left" from="SubViewport/MenuHallway" to="." method="_on_menu_hallway_options_left"]
[connection signal="options_reached" from="SubViewport/MenuHallway" to="." method="_on_menu_hallway_options_reached"]
[connection signal="start_reached" from="SubViewport/MenuHallway" to="." method="_on_menu_hallway_start_reached"]
